sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:11: error: not found: value i
	     i = debut;
             ^AlgCocktailSort2:12: error: not found: value i
		while (i<getNombreValeurs()-1)
                       ^AlgCocktailSort2:14: error: not found: value i
			if(plusPetit(i+1,i))
                                     ^AlgCocktailSort2:16: error: not found: value i
				echange(i,i+1);
                                        ^AlgCocktailSort2:19: error: not found: value i
			i=i+1;
                        ^AlgCocktailSort2:22: error: not found: value i
          i = fin;
          ^AlgCocktailSort2:24: error: not found: value i
		while(i>0)
                      ^AlgCocktailSort2:26: error: not found: value i
			if(plusPetit(i,i-1))
                                     ^AlgCocktailSort2:28: error: not found: value i
				echange(i,i-1);
                                        ^AlgCocktailSort2:31: error: not found: value i
			i=i-1;
                        ^